repair version spring parent